Senior_Project/src/senior/project/test/server/errors/ServerInvalidIntensityException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidIntensityException extends ServerRuntimeException {

  public ServerInvalidIntensityException(String msg) {
    super(msg);
  }
}
